# fanqie-dl

./: .gitignore  CLAUDE.md  Cargo.toml  ISSUE.md  README.md  REVERSE_ENGINEERING_NOTES.md  SKILLS.md  build.rs  mach_excServer.c
docs/: frida_dump.txt  vm_architecture.md
dynarmic-sys-local/: .cargo_vcs_info.json  Cargo.toml  Cargo.toml.orig  README.md  build.rs
dynarmic-sys-local/examples/: basic_a64.rs
dynarmic-sys-local/src/: ffi.rs  lib.rs
python_signer/: sign.py
scripts/: README.md  README_HOOKS.md  analyze_helios_medusa.js  analyze_r4.js  call_framesign.js  call_framesign2.js  call_sign.js  capture_and_curl.js  capture_and_test.js  capture_medusa.js  compare_sign.js  dump_all.sh  dump_all_in_one.js  dump_atomic.py  dump_clean.py  dump_emu_state.js  dump_for_unicorn.js  dump_full_memory.js  dump_full_memory.py  dump_got_fast.js  dump_got_full.js  dump_handle.js  dump_medusa_input.js  dump_mem_binary.py  dump_pages.py  dump_regs_and_stack.js  dump_regs_deadlock.js  dump_regs_wait.js  dump_sign_context.js  dump_so.js  dump_so.py  dump_so_memory.js  dump_so_only.py  dump_so_segments.py  dump_vm_data.js  find_jni_func.js  find_native_entry.js  frida_hook.py  frida_test.py  frida_test2.py  (+69 more)
src/: crypto.rs  device.rs  main.rs  model.rs  signer.rs
src/api/: book.rs  client.rs  mod.rs  reader.rs  search.rs
src/signer/: argus.rs  emulator.rs  gorgon.rs  ladon.rs  mod.rs  native_exec.rs  protobuf.rs  simon.rs  sm3.rs
